packages/zenoh/lib/src/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:zenoh/src/bindings.dart')
library;

import 'dart:ffi' as ffi;

/// Initializes the Dart native API for dynamic linking.
///
/// Must be called before any other zenoh_dart functions that use
/// Dart native ports. Pass `NativeApi.initializeApiDLData` from Dart.
///
/// Returns 0 on success.
@ffi.Native<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>()
external int zd_init_dart_api_dl(ffi.Pointer<ffi.Void> data);

/// Initializes the zenoh logger from the RUST_LOG environment variable,
/// falling back to the provided filter string if RUST_LOG is not set.
///
/// @param fallback_filter  Filter string (e.g., "error", "info", "debug").
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void zd_init_log(ffi.Pointer<ffi.Char> fallback_filter);

/// Returns the size of z_owned_config_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_config_sizeof();

/// Creates a default configuration.
///
/// @param config  Pointer to an uninitialized z_owned_config_t.
/// @return 0 on success, negative on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>)>()
external int zd_config_default(ffi.Pointer<ffi.Opaque> config);

/// Inserts a JSON5 value into the configuration at the given key path.
///
/// Takes a mutable owned config pointer. Internally obtains a mutable loan
/// via z_config_loan_mut() before calling zc_config_insert_json5().
///
/// @param config  Pointer to a valid z_owned_config_t.
/// @param key     Configuration key path (e.g., "mode").
/// @param value   JSON5 value string (e.g., "\"peer\"").
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external int zd_config_insert_json5(
  ffi.Pointer<ffi.Opaque> config,
  ffi.Pointer<ffi.Char> key,
  ffi.Pointer<ffi.Char> value,
);

/// Obtains a const loaned reference to the configuration.
///
/// @param config  Pointer to a valid z_owned_config_t.
/// @return Const pointer to the loaned config.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_config_loan(ffi.Pointer<ffi.Opaque> config);

/// Drops (frees) the configuration.
///
/// After this call the owned config is in gravestone state.
/// A second drop is a safe no-op.
///
/// @param config  Pointer to a z_owned_config_t to drop.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_config_drop(ffi.Pointer<ffi.Opaque> config);

/// Returns the size of z_owned_session_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_session_sizeof();

/// Opens a Zenoh session with the given configuration.
///
/// @param session  Pointer to an uninitialized z_owned_session_t.
/// @param config   Pointer to a z_owned_config_t (consumed by z_open).
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
>()
external int zd_open_session(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Opaque> config,
);

/// Obtains a const loaned reference to the session.
///
/// @param session  Pointer to a valid z_owned_session_t.
/// @return Const pointer to the loaned session.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_session_loan(
  ffi.Pointer<ffi.Opaque> session,
);

/// Gracefully closes and drops the session.
///
/// Calls z_close for graceful shutdown, then z_session_drop to release
/// resources. After this call the owned session is in gravestone state.
///
/// @param session  Pointer to a z_owned_session_t to close and drop.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_close_session(ffi.Pointer<ffi.Opaque> session);

/// Returns the size of z_view_keyexpr_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_view_keyexpr_sizeof();

/// Creates a view key expression from a null-terminated string.
///
/// The string must remain valid for the lifetime of the view.
///
/// @param ke    Pointer to an uninitialized z_view_keyexpr_t.
/// @param expr  Null-terminated key expression string.
/// @return 0 on success, Z_EINVAL (-1) if the expression is invalid.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>)>()
external int zd_view_keyexpr_from_str(
  ffi.Pointer<ffi.Opaque> ke,
  ffi.Pointer<ffi.Char> expr,
);

/// Obtains a const loaned reference to the key expression.
///
/// @param ke  Pointer to a valid z_view_keyexpr_t.
/// @return Const pointer to the loaned key expression.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_view_keyexpr_loan(
  ffi.Pointer<ffi.Opaque> ke,
);

/// Converts a loaned key expression to a view string.
///
/// The output view string borrows from the key expression and must not
/// outlive it. Returns void -- always succeeds on a valid loaned keyexpr.
///
/// @param ke   Const pointer to a loaned key expression.
/// @param out  Pointer to an uninitialized z_view_string_t to receive the result.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
>()
external void zd_keyexpr_as_view_string(
  ffi.Pointer<ffi.Opaque> ke,
  ffi.Pointer<ffi.Opaque> out,
);

/// Returns the size of z_owned_bytes_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_bytes_sizeof();

/// Copies a null-terminated string into owned bytes.
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param str    Null-terminated string to copy.
/// @return 0 on success, negative on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Char>)>()
external int zd_bytes_copy_from_str(
  ffi.Pointer<ffi.Opaque> bytes,
  ffi.Pointer<ffi.Char> str,
);

/// Copies a buffer into owned bytes.
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param data   Pointer to the buffer data.
/// @param len    Length of the buffer in bytes.
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external int zd_bytes_copy_from_buf(
  ffi.Pointer<ffi.Opaque> bytes,
  ffi.Pointer<ffi.Uint8> data,
  int len,
);

/// Converts loaned bytes to an owned string.
///
/// @param bytes  Const pointer to a loaned bytes reference.
/// @param out    Pointer to an uninitialized z_owned_string_t to receive the result.
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
>()
external int zd_bytes_to_string(
  ffi.Pointer<ffi.Opaque> bytes,
  ffi.Pointer<ffi.Opaque> out,
);

/// Obtains a const loaned reference to the bytes.
///
/// @param bytes  Pointer to a valid z_owned_bytes_t.
/// @return Const pointer to the loaned bytes.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_bytes_loan(ffi.Pointer<ffi.Opaque> bytes);

/// Drops (frees) owned bytes.
///
/// After this call the owned bytes are in gravestone state.
/// A second drop is a safe no-op.
///
/// @param bytes  Pointer to a z_owned_bytes_t to drop.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_bytes_drop(ffi.Pointer<ffi.Opaque> bytes);

/// Returns the size of z_owned_string_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_string_sizeof();

/// Obtains a const loaned reference to the owned string.
///
/// @param str  Pointer to a valid z_owned_string_t.
/// @return Const pointer to the loaned string.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_string_loan(ffi.Pointer<ffi.Opaque> str);

/// Returns a pointer to the data of a loaned string.
///
/// The returned pointer is NOT guaranteed to be null-terminated.
///
/// @param str  Const pointer to a loaned string.
/// @return Pointer to the string data.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Char> zd_string_data(ffi.Pointer<ffi.Opaque> str);

/// Returns the length of a loaned string (in bytes, NOT including any terminator).
///
/// @param str  Const pointer to a loaned string.
/// @return Length of the string data in bytes.
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>()
external int zd_string_len(ffi.Pointer<ffi.Opaque> str);

/// Drops (frees) an owned string.
///
/// After this call the owned string is in gravestone state.
/// A second drop is a safe no-op.
///
/// @param str  Pointer to a z_owned_string_t to drop.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_string_drop(ffi.Pointer<ffi.Opaque> str);

/// Returns the size of z_view_string_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_view_string_sizeof();

/// Returns a pointer to the data of a view string.
///
/// Internally loans the view string and calls z_string_data on the loaned ref.
/// The returned pointer is NOT guaranteed to be null-terminated.
///
/// @param str  Pointer to a valid z_view_string_t.
/// @return Pointer to the string data.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Char> zd_view_string_data(ffi.Pointer<ffi.Opaque> str);

/// Returns the length of a view string (in bytes, NOT including any terminator).
///
/// Internally loans the view string and calls z_string_len on the loaned ref.
///
/// @param str  Pointer to a valid z_view_string_t.
/// @return Length of the string data in bytes.
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>()
external int zd_view_string_len(ffi.Pointer<ffi.Opaque> str);

/// Publishes data on the given key expression.
///
/// The payload is consumed (moved) by this call -- the caller must not
/// use the owned bytes after calling zd_put.
///
/// @param session  Const pointer to a loaned session.
/// @param keyexpr  Const pointer to a loaned key expression.
/// @param payload  Pointer to an owned bytes (consumed via z_bytes_move).
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
  )
>()
external int zd_put(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Opaque> keyexpr,
  ffi.Pointer<ffi.Opaque> payload,
);

/// Deletes a resource on the given key expression.
///
/// @param session  Const pointer to a loaned session.
/// @param keyexpr  Const pointer to a loaned key expression.
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
>()
external int zd_delete(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Opaque> keyexpr,
);

/// Returns the size of z_owned_subscriber_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
@ffi.Native<ffi.Size Function()>()
external int zd_subscriber_sizeof();
